<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/refine"
    tools:context=".RefineActivity2">


    <LinearLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="#144444"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/backbtn"
            android:layout_width="21dp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Refine"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/_11sdp"
        android:layout_marginStart="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="52dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:text="Select Your Availability"
            android:textColor="#144444"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdownLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:hint="Select Availability"
            android:textColorHint="#144444">

            <AutoCompleteTextView
                android:id="@+id/dropdown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_37sdp"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:background="@drawable/textback"
                android:inputType="none"
                android:textColor="#144444" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:text="Add Your Status"
            android:textColor="#144444"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/textback"
            android:gravity="start"
            android:maxLines="5"
            android:padding="10dp"
            android:textColor="#144444"
            android:textColorHint="#C8C3C3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:text="Select Hyper local Distance"
            android:textColor="#144444"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/_13sdp"
            android:progress="50"
            android:layout_marginTop="@dimen/_21sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="Select Purpose"
            android:textColor="#144444"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/coff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/coffebtn"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/busibtn"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/hobby"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/friend"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/Movie"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />
            <Button
                android:id="@+id/dinni"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/din"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/date"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/matri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/btnback"
                android:text="@string/matri"
                android:textAllCaps="false"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_23sdp"
            android:background="@drawable/btnback"
            android:backgroundTint="#144444"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>